--- a/teach-me-ui/src/styles/_animation.scss
+++ b/teach-me-ui/src/styles/_animation.scss
@@ -80,7 +80,7 @@
 @keyframes chatOpen {
   from {
     opacity: 0;
-    transform: scale(0.925);
+    transform: scale(0.9);
   }
   to {
     opacity: 1;
